tdf#162753 - Hyperlink dialog: preset only syntactically valid hyperlinks

This backport includes cui: fix typo
3635a2d6d5ba348dfbce05705917fe086e328ada

make -srj1 UITest_writer_tests3 \
    UITEST_TEST_NAME=hyperlinkdialog.HyperlinkDialog.test_tdf162753_propose_invalid_clipboard_content \
    SAL_USE_VCLPLUGIN=gen

Change-Id: I682acfa4e41a3cce5f4639d79004bea985cabce3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/176112
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/178955
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Aron Budea <aron.budea@collabora.com>
Reviewed-by: Justin Luth <jluth@mail.com>