sw/qa/uitest/writer_tests3/hyperlinkdialog.py
@@ -110,7 +110,7 @@ class HyperlinkDialog(UITestCase):
             # Insert a sample URL
             xWriterDoc = self.xUITest.getTopFocusWindow()
             xWriterEdit = xWriterDoc.getChild("writer_edit")
-            xWriterEdit.executeAction("TYPE", mkPropertyValues({"TEXT": "www.libreoffice.org"}))
+            xWriterEdit.executeAction("TYPE", mkPropertyValues({"TEXT": "http://www.libreoffice.org"}))
 
             # Copy URL and open the hyperlink dialog
             self.xUITest.executeCommand(".uno:SelectAll")
@@ -121,6 +121,23 @@ class HyperlinkDialog(UITestCase):
                 # Check if the content of the clipboard is proposed as URL in the hyperlink dialog
                 xTarget = xDialog.getChild("target")
                 self.assertEqual(get_state_as_dict(xTarget)["Text"].lower(), "http://www.libreoffice.org/")
+
+    def test_tdf162753_propose_invalid_clipboard_content(self):
+        with self.ui_test.create_doc_in_start_center("writer"):
+            # Insert an invalid sample URL
+            xWriterDoc = self.xUITest.getTopFocusWindow()
+            xWriterEdit = xWriterDoc.getChild("writer_edit")
+            xWriterEdit.executeAction("TYPE", mkPropertyValues({"TEXT": "libreoffice"}))
+
+            # Copy URL and open the hyperlink dialog
+            self.xUITest.executeCommand(".uno:SelectAll")
+            self.xUITest.executeCommand(".uno:Copy")
+            with self.ui_test.execute_dialog_through_command(".uno:HyperlinkDialog", close_button="cancel") as xDialog:
+                xTab = xDialog.getChild("tabcontrol")
+                select_pos(xTab, "0")
+                # Check if the content of the clipboard is not proposed as URL in the hyperlink dialog
+                xTarget = xDialog.getChild("target")
+                self.assertEqual(get_state_as_dict(xTarget)["Text"], "")
 
     def test_tdf141166(self):
         # Skip this test for --with-help=html and --with-help=online, as that would fail with a
